Fixing spacing issues

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -117,10 +117,14 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+.beta-sticker-wrap {
+  position: relative;
+}
+
 .beta-sticker {
   position: absolute;
   width: 392px;
-  top: 4.5rem;
+  top: 3.5rem;
   left: 5%;
   padding: 1rem;
   -moz-transform: rotate(1.33deg);
@@ -140,7 +144,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 
   .modal-header {
-    padding: 0.25rem 1rem 0;
+    padding: 0.5rem 1rem 0;
   }
 
   .modal-body {
